--- a/css/components/card.css
+++ b/css/components/card.css
@@ -15,7 +15,6 @@
   display: flex;
   justify-content: space-evenly;
   height: 325px;
-
 }
 .cards h2 {
   font-size: 25px;
@@ -31,6 +30,19 @@
   width: 180px;
   position: relative;
   top: 45px;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+
+
+.card:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .card img {
